--- a/src/includes/config/conf_socials.pug
+++ b/src/includes/config/conf_socials.pug
@@ -2,18 +2,23 @@
 
     const SOCIALS = [
         {
-            url: '#',
+            url: 'https://www.facebook.com/tolkogroup/',
             icon: 'icon-fb.svg',
             alt: 'facebook tolko',
         },
         {
-            url: '#',
+            url: 'https://twitter.com/TolkoGroup',
             icon: 'icon-twitter.svg',
             alt: 'twitter tolko',
         },
         {
-            url: '#',
+            url: 'https://www.linkedin.com/company/tolko/?viewAsMember=true',
             icon: 'icon-in.svg',
             alt: 'likedin tolko'
+        },
+        {
+            url: 'https://www.instagram.com/grupo_tolko/',
+            icon: 'icon-ig.svg',
+            alt: 'instagram tolko',
         },
     ]
