--- a/src/includes/components/footer.pug
+++ b/src/includes/components/footer.pug
@@ -23,4 +23,4 @@ footer.__row.footer
                 h2 Síguenos
                 ul.header__socials
                     each social in SOCIALS
-                        li: a(href=`${social.url}`): img(src=`${imagePath}${social.icon}`, alt=`${social.alt}`)
+                        li: a(href=`${social.url}`, target="_blank"): img(src=`${imagePath}${social.icon}`, alt=`${social.alt}`)
