--- a/src/scss/theme/_typography.scss
+++ b/src/scss/theme/_typography.scss
@@ -12,7 +12,7 @@ $font-size: (
     // subtitle: 2.4rem,
     caption: 2rem,
     body: 1.6rem,
-    // medium: 1.4rem,
+    small: 1.4rem,
 );
 
 $font-family: (
