--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -1,24 +1,77 @@
 .form {
-    max-width: 50rem;
+    // max-width: 50rem;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    gap: var(--sm);
+
+    & * {
+        color: var(--text);
+        font-size: var(--body);
+    }
 
     @media only screen and (min-width: 568px) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    &__fieldset {
         display: grid;
-        grid-template-columns: repeat(2, 50%);
-        grid-template-rows: auto;
-        column-gap: var(--sm);
+        gap: var(--sm);
+        border: 0.1rem solid rgba(0, 0, 0, 0.2);
+        border-radius: var(--sm);
+        padding: var(--sm);
+
+        @media only screen and (min-width: 568px) {
+            
+            &:first-child,
+            &:nth-child(4) {
+                grid-column-start: 1;
+                grid-column-end: 3;
+            }
+        }
+    }
+
+    &__informacion-personal {
+        // display: grid;
+        // grid-template-columns: 1fr;
+        // grid-template-rows: auto;
+        // gap: var(--sm);
+
+        // @media only screen and (min-width: 568px) {
+        //     grid-template-columns: repeat(2, 50%);
+
+        //     .form__label:nth-child(2),
+        //     .form__label:nth-child(3) {
+        //         grid-column-start: 1;
+        //         grid-column-end: 3;
+        //     }
+        // }
+    }
+
+    &__legend {
+        font-size: var(--small);
+        margin-left: -1rem;
+        padding-right: 0.8rem;
+        padding-left: 1rem;
+    }
+
+    &__label {
+        display: block;
+        
+        & > span {
+            display: block;
+            margin-bottom: var(--xs);
+        }
     }
 
     &__input {
-        color: var(--text);
         background-color: transparent;
         border: 0.1rem solid currentColor;
         border-radius: var(--lg);
-        font-size: var(--body);
         padding: 1.2rem var(--sm);
-        margin-bottom: var(--sm);
         width: 100%;
-        transition: border-color 0.3s ease,
-                    border-width 0.3s ease;
+        transition: border-color 0.3s ease-in-out,
+                    border-width 0.3s ease-in;
 
         &:last-child {
             margin-bottom: 0;
@@ -27,87 +80,46 @@
         &:focus {
             border-color: var(--first);
             border-width: 0.1rem;
-            transition: border-color 0.3s ease,
-                        border-width 0.3s ease;
+            transition: border-color 0.3s ease-in-out,
+                        border-width 0.3s ease-in-out;
             outline: none;
         }
 
         &:placeholder-shown {
             font-size: var(--body);
         }
+    }
 
-        @media only screen and (min-width: 568px) {
-
-            &:first-child {
-                grid-column-start: 1;
-                grid-column-end: 3;
-                grid-row-start: 1;
-                grid-row-end: 2;
-            }
-            
-            &:nth-child(2) {
-                grid-column-start: 1;
-                grid-column-end: 3;
-                grid-row-start: 2;
-                grid-row-end: 3;
-            }
-            
-            &:nth-child(3) {
-                grid-column-start: 1;
-                grid-column-end: 2;
-                grid-row-start: 3;
-                grid-row-end: 4;
-            }
-            
-            &:nth-child(4) {
-                grid-column-start: 2;
-                grid-column-end: 3;
-                grid-row-start: 3;
-                grid-row-end: 4;
-            }
-            
-            &:nth-child(5) {
-                grid-column-start: 1;
-                grid-column-end: 2;
-                grid-row-start: 4;
-                grid-row-end: 5;
-            }
-            
-            &:nth-child(6) {
-                grid-column-start: 2;
-                grid-column-end: 3;
-                grid-row-start: 4;
-                grid-row-end: 5;
-            }
-            
-            &:nth-child(7) {
-                grid-column-start: 1;
-                grid-column-end: 3;
-                grid-row-start: 5;
-                grid-row-end: 6;
-            }
-            
-            &:last-child {
-                grid-column-start: 1;
-                grid-column-end: 3;
-                grid-row-start: 7;
-                grid-row-end: 8;
-            }
-
-        }
-
+    &__radio {
+        border: 0.1rem solid var(--text);
+        margin-bottom: var(--xs);
+        margin-right: var(--xs);
     }
 
     &__textarea {
+        border-radius: var(--sm);
+        width: 100%;
         height: 12rem;
+        min-width: 100%;
+        max-width: 0;
+        min-height: 12rem;
+        max-height: 12rem;
     }
 
     &__button {
         cursor: pointer;
+        color: var(--text-alt);
+        background-color: var(--text);
+        border-color: var(--text);
         text-align: center;
-        transition: color 0.3s ease,
-                    background-color 0.3s ease,
+        transition: color 0.3s ease-in-out,
+                    background-color 0.3s ease-in-out,
                     border-color 0.3s ease-in;
+
+        @media only screen and (min-width: 568px) {
+            grid-column-start: 1;
+            grid-column-end: 3;
+        }
         
         &:hover {
             color: var(--text-alt);
@@ -115,5 +127,4 @@
             border-color: var(--first);
         }
     }
-
 }
