lse agrega instagram y modifica el nombre del arcivo svg de twitter

--- a/src/includes/config/conf_socials.pug
+++ b/src/includes/config/conf_socials.pug
@@ -8,8 +8,13 @@
         },
         {
             url: '#',
-            icon: 'icon-twitter.svg',
+            icon: 'icon-tw.svg',
             alt: 'twitter tolko',
+        },
+        {
+            url: '#',
+            icon: 'icon-ig.svg',
+            alt: 'instagram tolko'
         },
         {
             url: '#',
