se agrega el components socials

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,6 +6,7 @@
 
 @import 'components/hero-background';
 @import 'components/header';
+@import 'components/socials';
 @import 'components/main';
 @import 'components/form';
 @import 'components/card';
