--- a/src/scss/components/_socials.scss
+++ b/src/scss/components/_socials.scss
@@ -8,5 +8,14 @@
         &:last-child {
             margin-right: 0;
         }
+
+        img {
+            transition: transform 0.3s ease-in-out;
+        }
+
+        a:hover img {
+            transform: scale(1.1);
+            transition: transform 0.3s ease-in-out;
+        }
     }
 }
