--- a/src/includes/pages/index.pug
+++ b/src/includes/pages/index.pug
@@ -22,20 +22,29 @@ html(lang="es")
 
         include ../components/header
 
-
         .__row
             .__column.main__container
+
                 .main__wrap.main__heading
                     p.text-alt.display-two.regular Prepara tu oficina o restaurante para la nueva normalidad con
                     p.text-alt.display-one.bold Mamparas de acrílico
-                    p.text-alt.caption.light Como medida de protección de la salud ante el regreso paulatino a actividades, una medida de protección es la colocación de mamparas de acrílico para separar espacios físicos de encuentro. Por ello, hemos desarrollado alternativas para nuestros clientes.
+                    p.text-alt.caption.light Una medida de protección de la salud ante el regreso paulatino a las actividades, es la colocación de mamparas de acrílico para separar espacios físicos de encuentro. Por ello, hemos desarrollado alternativas para nuestros clientes.
+                
                 .main__wrap.main__cards
                     include ../components/card 
+                
                 .main__wrap.main__subheading
-                    p.display-one.bold.stroke ¡Ponles tu sello!
+                    p.display-one.bold.first ¡Ponles tu sello!
                     p.text.caption.light Las mamparas podrán ir lisas o llevar la identidad de la empresa en vinil (aplicaciones a personalizar, con adaptación de costos en distintas alternativas).
+                
+                .main__wrap.main__heading-form
+                    p.title.extra-light.first Se pueden diseñar mamparas a la medida, además de las opciones genéricas
+                    p.text.caption.medium Solicita tu cotización o más información:
+              
                 .main__wrap.main__form
-                    p.text.title.medium Solicita tu cotización o más información:
                     include ../components/form
+                
+                .main__wrap
+                    p.title.extra-light.first También producimos la señalética necesaria para tu oficina o negocio rumbo a la nueva normalidad
 
         include ../components/footer
