se cambian las  imagenes

--- a/src/includes/config/conf_cards.pug
+++ b/src/includes/config/conf_cards.pug
@@ -4,12 +4,12 @@
 
     const CARDS = [
         {
-            image: 'mampara-oficina-1.png',
+            image: 'mampara-oficina-1.jpg',
             title: 'Oficinas',
             description: 'Mampara de acrílico de 3 mm de espesor, con base de acrílico, para colocarse sobre escritorios compartidos o en estaciones de trabajo como recepciones de corporativos.',
         },
         {
-            image: 'mampara-exterior-1.png',
+            image: 'mampara-exterior-1.jpg',
             title: 'Restaurantes',
             description: 'Pedestal de metal de 80 cm de altura, con acrílico de 3, 6 o 12 mm de espesor, para separación de mesas o espacios de convivencia.',
         },
