se agrega un div con la clase .card__content

--- a/src/includes/components/card.pug
+++ b/src/includes/components/card.pug
@@ -1,5 +1,6 @@
 each card in CARDS
     .card
-        img(src=`${imagePath}${card.image}`, alt=`${card.image}`, class="card__content card__image")
+        .card__content
+            img(src=`${imagePath}${card.image}`, alt=`${card.image}`, class="card__image")
         h1.card__content.card__title= `${card.title}`
         p.card__content.card__description= `${card.description}`
