--- a/src/includes/components/footer.pug
+++ b/src/includes/components/footer.pug
@@ -4,7 +4,7 @@ footer.__row.footer
     .__column.footer__wrap
         .footer__item
             .footer__box.footer__logo
-                img(src="img/logo-tolko.svg", alt="tolko") 
+                a(href="http://www.tolkogroup.com/", target="_blank"): img(src="img/logo-tolko.svg", alt="tolko") 
                 h2.footer__slogan somos únicos
         .footer__item
             .footer__box
