--- a/src/includes/components/header.pug
+++ b/src/includes/components/header.pug
@@ -1,4 +1,4 @@
 .__row.header
     .__column.header__navbar
-        img(src="img/logo-tolko.svg", class="header__logo", alt="tolko")
+        a(href="http://www.tolkogroup.com/", target="_blank"): img(src="img/logo-tolko.svg", class="header__logo", alt="tolko")
         include socials
