--- a/src/includes/config/conf_socials.pug
+++ b/src/includes/config/conf_socials.pug
@@ -2,22 +2,22 @@
 
     const SOCIALS = [
         {
-            url: '#',
+            url: 'https://www.facebook.com/tolkogroup/',
             icon: 'icon-fb.svg',
             alt: 'facebook tolko',
         },
         {
-            url: '#',
+            url: 'https://twitter.com/TolkoGroup',
             icon: 'icon-tw.svg',
             alt: 'twitter tolko',
         },
         {
-            url: '#',
+            url: 'https://www.instagram.com/grupo_tolko/',
             icon: 'icon-ig.svg',
             alt: 'instagram tolko'
         },
         {
-            url: '#',
+            url: 'https://www.linkedin.com/company/tolko/?viewAsMember=true',
             icon: 'icon-in.svg',
             alt: 'likedin tolko'
         },
