--- a/src/includes/pages/index.pug
+++ b/src/includes/pages/index.pug
@@ -6,16 +6,24 @@ html(lang="es")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Mamparas para espacios públicos - Tolko
-        link(href="fonts/tolko.css", rel="stylesheet")
-        link(href="css/styles.css?=200520:2213", rel="stylesheet")
+        meta(name="description", content="Mamparas de acrílico para tu oficina o restaurante. Prepárate para la nueva normalidad.")
+        meta(name="keywords", content="mamparas de acrílico, mamparas para tu restaurante, mamaparas para tu oficina, mamparas para espacios públicos, mamparas, acrílico, nueva normalidad")
+        meta(name="author", content="brunoslgdo")
+        meta(name="copyright", content="tolko group - 2020")
+        meta(name="robots", content="index")
+        meta(name="robots", content="follow")
+        meta(http-equiv="cache-control", content="no-cache")
+        title Mamparas de acrílico - Tolko
+        link(href="css/fonts.css?=270520:1847", rel="stylesheet")
+        link(href="css/styles.css?=270520:1847", rel="stylesheet")
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-167319716-1"></script>
+        script(async src="https://www.googletagmanager.com/gtag/js?id=UA-167568276-1")
         script.
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
-            gtag('config', 'UA-167319716-1');
+            gtag('config', 'UA-167568276-1');
+
     body
 
         .hero-background
