--- a/src/includes/components/socials.pug
+++ b/src/includes/components/socials.pug
@@ -1,3 +1,3 @@
 ul.socials
     each social in SOCIALS
-        li: a(href=`${social.url}`): img(src=`${imagePath}${social.icon}`, alt=`${social.alt}`)
+        li: a(href=`${social.url}`, target="_blank"): img(src=`${imagePath}${social.icon}`, alt=`${social.alt}`)
