--- a/src/includes/templates/main.pug
+++ b/src/includes/templates/main.pug
@@ -3,5 +3,5 @@ html(lang="es")
     head
         meta(charset="UTF-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Mamparas para espacios públicos - Tolko
+        title Mamparas de acrílico - Tolko
     body
